--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "tailwindcss": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -44,8 +45,10 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
-    "tailwindcss": "^3.3.3",
-    "homepage": "https://RahulL2203.github.io/api-user-data-ui"
-  }
+    "gh-pages": "^6.0.0"
+    
+    
+  },
+  "homepage": "https://RahulL2203.github.io/user_info_ui"
+
 }
